--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
-{
-  "name": "nitro-ws-proxy",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "http-proxy": "^1.18.1"
-  }
+
+ "type": "module",
+"dependencies": {
+  "express": "^4.18.2",
+  "http-proxy": "^1.18.1",
+  "ws": "^8.12.1"
 }
