--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "nitro-ws-proxy",
+  "name": "websocket-proxy",
   "version": "1.0.0",
-  "main": "server.js",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "http-proxy": "^1.18.1"
